[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ar1-rl"
version = "0.1.0"
description = "Gymnasium trading environment with PPO and PDPPO agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=0.29.1",
  "numpy>=1.26.0",
  "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
